Fix table overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@ table {
     margin-top: 2em;
 }
 
+div.table {
+    overflow: auto;
+}
+
 table,
 th,
 td {
